tests/compile_fail/custom_impl_compat.stderr
error[E0080]: evaluation panicked: 
              assertion failed.
              Failed to impl `ShaderLayoutCompat`: field `Compat::a2` (`Vec2ArrayLen3`) size (24) must be `SIZE_COMPAT` (48) due to uniform layout constraints
              
  --> tests/compile_fail/custom_impl_compat.rs:17:1
   |
17 | / shader_layout_compat! {
18 | |
19 | |
20 | |     pub struct Compat {
...  |
26 | | }
   | |_^ evaluation of `_::_` failed here
   |
   = note: this error originates in the macro `shader_layout_compat` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation panicked: 
              assertion failed.
              Failed to impl `ShaderLayoutCompat`: field `Compat::a2` (`Vec2ArrayLen3`) is not properly aligned. The offset is 8 but required align is `ALIGN_COMPAT` (16)
              
  --> tests/compile_fail/custom_impl_compat.rs:17:1
   |
17 | / shader_layout_compat! {
18 | |
19 | |
20 | |     pub struct Compat {
...  |
26 | | }
   | |_^ evaluation of `_::_` failed here
   |
   = note: this error originates in the macro `shader_layout_compat` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
